--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Webdeveloper Macrodegree  
+  uni: Learn Enough
+  year: July 2018 - August 2018
   # awards:
-  # summary:
+  # summary:Big D updates
